--- a/plotting/Sim_setup.qmd
+++ b/plotting/Sim_setup.qmd
@@ -224,7 +224,7 @@ plots1[stringr::str_detect(names(plots1), "syn 5")]
 source("plot_fnc.R")
 
 # example plot 1
-synplot1(full, bmi~age)
+synplot1(full, bmi ~ age)
 
 # example plot 2
 synplot1(full, age ~ hgt)
@@ -294,42 +294,49 @@ syn2 <- mice(truth2,
                            ncol(truth2))) %>%
   complete("all")
 
+
 full2 <- syn2 %>% 
   append(list(truth2)) %>% 
   setNames(c(paste0("syn", 1:5), "truth"))
 
+
 full2 %>% 
   map(~.x %$% lm(sws ~ log10(bw) + odi)) %>% 
   synplot2()
+
+
 
 set.seed(124)
 imp <- mammalsleep %>% mice(print=FALSE) 
 imp %>% complete("all") %>% map(~.x %$% lm(sws ~ log10(bw) + odi)) %>% pool()
 plot1 <- synplot2({complete(imp, "all") %>% map(~.x %$% lm(sws ~ log10(bw) + odi))}, smoother = "lm")
 
-set.seed(123)
+
+
 imp <- mammalsleep %>% mice(print=FALSE) 
 imp %>% complete("all") %>% map(~.x %$% lm(sws ~ log10(bw) + odi)) %>% pool()
 plot2 <- synplot2({complete(imp, "all") %>% map(~.x %$% lm(sws ~ log10(bw) + odi))}, smoother = "lm")
-plot1
+plot1 
 plot2
+
+
 
 imp <- mammalsleep %>% mice(print=FALSE, meth = "mean") 
 imp %>% complete("all") %>% map(~.x %$% lm(sws ~ log10(bw) + odi)) %>% pool()
 plot3 <- synplot2({complete(imp, "all") %>% map(~.x %$% lm(sws ~ log10(bw) + odi))}, smoother = "lm")
-plot3
+plot3 
 
+## variance plots
+impplot1(mammalsleep, lm.formula = sws ~ log10(bw) + odi, print=TRUE)
 
-### What do we want to plot.... exactly??
-imp %>% complete("all") %>% map(~.x %$% lm(sws ~ log10(bw) + odi) %>% .$fitted.values) %>% bind_rows(.id="id") %>% summarize_at(vars(-id), var)
+impplot1(mammalsleep, lm.formula = sws ~ log10(bw) + odi, seed=123)
 
-imp %>% complete("all") %>% map(~.x %$% lm(sws ~ log10(bw) + odi) %>% .$fitted.values) %>% 
-  bind_cols() %>%
-  rowwise() %>%
-  mutate(means = mean(c_across()),
-         vars = var(c_across()))
+impplot1(mammalsleep, lm.formula = sws ~ log10(bw) + odi, seed=124)
+
+impplot1(mammalsleep, imp.method = "mean", lm.formula = sws ~ log10(bw) + odi, seed=124)
 
 ```
+
 
 
 # RMSE
